--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ img {
     right: 0;
     background-color: var(--primary-lightorange);
     padding: 1rem 0;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .header-container {
@@ -87,10 +87,10 @@ img {
 
 .hero {
     background-color: var(--primary-lightorange);
-    padding: 1rem 0;
     display: flex;
     align-items: center;
     height: auto;
+    margin-bottom: 5rem;
 }
 
 
@@ -104,20 +104,23 @@ img {
 
 .hero-content {
     max-width: 734px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
 }
 
 .hero-content h2 {
-    font-family: 'SpokaHanSansNeoBold', 'Malgun Gothic', sans-serif;
+    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+    font-weight: 700;
     font-size: 3rem;
     line-height: 1.3;
-    margin-bottom: 2.5rem;
     color: var(--text-dark);
 }
 
 .hero-content p {
     font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
-    width: 28rem;
-    margin-bottom: 2.5rem;
+    max-width: 28rem;
     line-height: 1.8;
     font-size: 1rem;
 }
@@ -150,16 +153,17 @@ img {
     width: 100%;
     height: 100%;   
     object-fit: cover;
+    object-position: center -80%;
 }
 
 .feature-01 {
-    padding: 5rem 0;
     background-color: white;
 }
 
 .feature-01-container {
     max-width: 1200px;
     margin: 0 10rem;
+    margin-bottom: 110px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 7rem;
@@ -170,7 +174,6 @@ img {
     position: relative;
     max-width: 660px;
     width: 100%;
-    min-width: 326px;
     height: 0;
     padding-top: 60%;
 }
@@ -184,57 +187,69 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.feature-01-content {
-    text-align: center;
+    object-position: center 30%;
 }
 
 .feature-01-content h2 {
-    font-family: 'SpokaHanSansNeoBold', 'Malgun Gothic', sans-serif;
+    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+    font-weight: 700;
     font-size: 2rem;
     line-height: 1.4;
     margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .feature-01-content p {
     line-height: 1.8;
     font-size: 1rem;
+    text-align: left;
 }
 
 .feature-02 {
-    padding: 5rem 0;
     text-align: center;
+    overflow: hidden;
+}
+
+.feature-header {
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
 }
 
 .feature-02-container {
     max-width: 1200px;
     margin: 0 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;  
 }
 
 .feature-02-title {
-    font-family: 'SpokaHanSansNeoBold', 'Malgun Gothic', sans-serif;
-    font-size: 2rem;
+    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
     color: var(--primary-orange);
-    margin-bottom: 1.5rem;
 }
 
 .feature-02-description {
-    margin-bottom: 3rem;
     line-height: 1.8;
     font-size: 1rem;
 }
 
 .feature-02-highlight {
     color: var(--primary-orange);
-    font-family: 'SpokaHanSansNeoBold', 'Malgun Gothic', sans-serif;
+    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+    font-weight: 700;
 }
 
 
 .feature-02-grid {
+    min-width: 820px;
+    min-height: 260px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    overflow: hidden;
+    gap: 4rem;
 }
 
 
@@ -242,14 +257,13 @@ img {
     border-radius: 15px;
     box-shadow: 10px 10px 30px 0px #00000040;
     width: 100%;
-    aspect-ratio: 4 / 3;
+    aspect-ratio: 1 / 1;
     height: auto;
     object-fit: cover;
 }
 
 .feature-footer {
-    width: 100%;
-    margin-top: 4rem;
+    width: 100%;    
     text-align: left;
     display: flex;
     align-items: center;
@@ -271,12 +285,11 @@ img {
     border-radius: 25px;
     border: none;
     font-size: 1rem;
-    transition: background-color 0.3s ease, transform 0.2s ease;
+    white-space: nowrap;
 }
 
 .feature-learn-btn:hover{
     background-color: #c5624a;
-    transform: translateY(-2px);
 }
 
 
@@ -289,13 +302,12 @@ img {
     max-width: 1200px;
     margin: 0 10rem;
     background-color: #34495e;
-    padding: 3rem 2.5rem;
     border-radius: 20px;
     color: var(--text-white);
     display: flex;
-    gap: 6rem;
+    gap: 5rem;
     align-items: center;
-
+    padding: 50px 60px;
     position: relative;
     top: 80px;       
     z-index: 10;
@@ -306,8 +318,9 @@ img {
 }
 
 .subscribe-title {
-    font-family: 'SpokaHanSansNeoBold', 'Malgun Gothic', sans-serif;
-    font-size: 2rem;
+    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+    font-weight: 700;
+    font-size: 2.25rem;
     margin-bottom: 1rem;
 }
 
@@ -359,7 +372,6 @@ img {
 
 .subscribe-submit-btn:hover {
     background-color: #c5624a;
-    transform: translateY(-2px);
 }
 .footer-image {
     position: relative;
@@ -402,6 +414,14 @@ img {
     align-items: center;
 }
 
+.footer-left {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;    
+}
+
 .footer-logo {
     width: 14rem;
 }
@@ -432,6 +452,14 @@ img {
     transform: translateY(-3px);
 }
 
+.footer-nav {
+    display: none;
+}
+.footer__link {
+    display: none;
+    color: #666;
+    font-size: 0.9rem;
+}
 .scroll-top-btn {
     position: fixed;
     bottom: 8rem;
@@ -455,10 +483,21 @@ img {
     fill: #767676;
 }
 
+.mobile-menu {
+    display: none;
+}
+
+@media (max-width: 1200px) {
+    html {
+        font-size: 13px;
+    }
+    
+
+}
 
 @media (max-width: 1024px) {
     html {
-        font-size: 14px;
+        font-size: 12px;
     }
     
 
@@ -467,11 +506,143 @@ img {
 
 @media (max-width: 768px) {
     html {
-        font-size: 13px;
+        font-size: 11px;
     }
 
+    .header-container {
+        margin: 0 20px;
+    }
+
+    .hero {
+        padding-top: 40px;
+        margin-bottom: 40px;
+    }
+    .hero-container {
+        flex-direction: column;
+        text-align: center;
+        font-size: 24px;
+        margin: 0 32px;
+    }
+
+    .hero-container h2 {
+        font-size: 24px;
+    }
     
+    .hero-content p {
+        font-size: 14px;
+    }
+    .hero-content {
+        margin-bottom: 3rem;
+        align-items: center;
+        gap: 20px;
+    }
+    .hero-image {
+        width: 200px;
+    }
+
+    .feature-01-container {
+        margin: 0 32px;
+        gap: 32px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 60px;
+    }
+    
+    .feature-01-content h2 {
+        text-align: left;
+    }
+
+    .feature-01-content p {
+        font-size: 14px;
+    }
+
+    .feature-02-container {
+        margin: 0 32px;
+        gap: 50px;
+    }
+    .feature-header{
+        gap: 16px;
+    }
+    .feature-02-title {
+        font-size: 24px;
+    }
+
+    .feature-02-description {
+        font-size: 16px;
+        margin-bottom: 50px;
+    }
+
+
+
+
+
+    .feature-footer {
+        flex-direction: column;
+        justify-content: right;
+        align-items: flex-end;
+        gap: 23px;
+    }
+
+    .feature-footer-text {
+        font-size: 16px;
+    }
+
+
+    .footer-left{ 
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+    }
+    
+    .footer-logo {
+        width: 10rem;
+    }
+
+
+
+    .subscribe-container {
+        margin: 0 20px;
+        padding: 36px 32px;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .subscribe-title {
+        font-size: 24px;
+    }
+
+    .subscribe-description {
+        font-size: 14px;
+    }
+
+    .subscribe-form {
+        width: 100%;
+        flex-direction: column;
+        gap: 0.75rem;
+        align-items: flex-end   ;
+    }
+
+    .subscribe-input {
+        width: 100%;
+        padding: 1rem 1.25rem;
+    }
+
+    .subscribe-submit-btn {
+        position: static;
+        width: 50%;
+        padding: 0.9rem;
+        font-size: 1rem;
+        transform: none;
+    }
+    .scroll-top-btn {
+        position: fixed;
+        bottom: 4rem;
+    }
 }
+
+
+
 
  @media (max-width: 480px) {
 
@@ -491,19 +662,94 @@ img {
         display: block;
     }
 
-    .hero-container {
-        flex-direction: column;
+    .scroll-top-btn {
+        display: none;    
     }
 
+    .subscribe-title {
+        max-width: 200px;
+        font-size: 24px;
+    }
     
-    .hero-image {
-        width: 200px;
-    }
-    .scroll-top-btn {
-        display: none;    
+    .footer {
+        padding: 2rem;
     }
 
-    .scroll-top-btn {
-        display: none;    
+    .footer-container {
+        margin: 0;
+        gap: 5rem;
     }
+
+    .footer-image img{
+        object-position: center -10%;
+    }
+
+    .footer-nav {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: right;
+        justify-content: center;
+        font-size: 14px;
+        color: #767676;
+    }
+
+    .footer-link {
+        display: block;
+    }
+
+
+    .mobile-menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 70%;
+        height: 100vh;
+        background-color: #263140;
+        padding: 22px;
+        z-index: 20;
+    }
+
+    .mobile-menu-close {
+        cursor: pointer;
+        margin-bottom: 4rem;
+    }
+
+    .mobile-menu-close img {
+        width: 32px;
+        height: 32px;
+    }
+
+    .mobile-menu-nav {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+    }
+
+    .mobile-menu-link {
+        margin-left: 25px;
+        color: var(--text-white);
+        font-size: 16px;
+        font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+        font-weight: 700px;
+    }
+
+    .mobile-menu-link:hover {
+        color: var(--primary-orange);
+    }
+
+    .mobile-menu-download-btn {
+        width: 120px;
+        height: 40px;
+        margin-left: 18px;
+        background-color: var(--primary-orange);
+        color: var(--text-white);
+        padding: 10px 24px;  
+        border-radius: 40px;
+        font-size: 14px;
+        font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
+        font-weight: 700px;
+        cursor: pointer;
+    }   
  }
