--- a/styles/style.css
+++ b/styles/style.css
@@ -444,7 +444,6 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .footer-social-link:hover {
@@ -485,6 +484,58 @@ img {
 
 .mobile-menu {
     display: none;
+}
+
+.modal-container {
+    background-image: url('../images/modal-bg-img.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 20%;
+    right: 30%;
+    width: 600px;
+    height: 400px;
+    z-index: 20;
+    box-shadow: 0px 0px 30px 0px #00000033;
+    border-radius: 30px;
+}
+
+.modal-cat-image {
+    width: 110px;
+    height: 112px;
+    margin-bottom: 24px;
+}
+
+.modal-title {
+    font-size: 36px;
+    font-weight: 700px;
+    line-height: 1.3;
+    color: var(--primary-orange);
+    margin-bottom: 12px;
+}
+
+.modal-text{
+    font-size: 14px;
+    margin-bottom: 34px;
+}
+
+.modal-close-btn {
+    width: 190px;
+    height: 52px;
+    background-color: var(--primary-orange);
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--text-white);
 }
 
 @media (max-width: 1200px) {
@@ -751,5 +802,37 @@ img {
         font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
         font-weight: 700px;
         cursor: pointer;
-    }   
+    }
+
+    .modal-container {
+        background-size: contain;
+        background-color: var(--primary-lightorange);
+        top: 20%;
+        right: 10%;
+        width: 300px;
+        height: 300px;
+        text-align: center;
+    }
+
+    .modal-cat-image {
+        width: 60px;
+        height: 62px;
+        margin-bottom: 22px;
+    }
+
+    .modal-title {
+        font-size: 24px;
+        margin-bottom: 8px;
+    }
+
+    .modal-text{
+        margin-bottom: 26px;
+    }
+
+    .modal-close-btn {
+        width: 164px;
+        height: 40px;
+        font-size: 14px;
+    }
+
  }
