--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,6 @@ img {
 }
 
 .hero-content h2 {
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     font-weight: 700;
     font-size: 3rem;
     line-height: 1.3;
@@ -119,7 +118,6 @@ img {
 }
 
 .hero-content p {
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     max-width: 28rem;
     line-height: 1.8;
     font-size: 1rem;
@@ -191,7 +189,6 @@ img {
 }
 
 .feature-01-content h2 {
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     font-weight: 700;
     font-size: 2rem;
     line-height: 1.4;
@@ -225,7 +222,6 @@ img {
 }
 
 .feature-02-title {
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     font-weight: 700;
     font-size: 3rem;
     color: var(--primary-orange);
@@ -238,7 +234,6 @@ img {
 
 .feature-02-highlight {
     color: var(--primary-orange);
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     font-weight: 700;
 }
 
@@ -318,7 +313,6 @@ img {
 }
 
 .subscribe-title {
-    font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
     font-weight: 700;
     font-size: 2.25rem;
     margin-bottom: 1rem;
@@ -407,7 +401,7 @@ img {
 
 .footer-container {
     max-width: 1200px;
-    margin: 0 10rem;
+    margin: 2rem 10rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -641,7 +635,7 @@ img {
 
     
     .footer-container {
-        margin: 0 20px;
+        margin: 10px 20px;
     }
 
     .footer-logo {
@@ -783,7 +777,6 @@ img {
         margin-left: 25px;
         color: var(--text-white);
         font-size: 16px;
-        font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
         font-weight: 700px;
     }
 
@@ -800,7 +793,6 @@ img {
         padding: 10px 24px;  
         border-radius: 40px;
         font-size: 14px;
-        font-family: 'SpokaHanSansNeo', 'Malgun Gothic', sans-serif;
         font-weight: 700px;
         cursor: pointer;
     }
