--- a/styles/style.css
+++ b/styles/style.css
@@ -513,7 +513,7 @@ img {
 
 .modal-title {
     font-size: 36px;
-    font-weight: 700px;
+    font-weight: 700;
     line-height: 1.3;
     color: var(--primary-orange);
     margin-bottom: 12px;
@@ -789,7 +789,7 @@ img {
         margin-left: 25px;
         color: var(--text-white);
         font-size: 16px;
-        font-weight: 700px;
+        font-weight: 700;
     }
 
     .mobile-menu-link:hover {
@@ -805,7 +805,7 @@ img {
         padding: 10px 24px;  
         border-radius: 40px;
         font-size: 14px;
-        font-weight: 700px;
+        font-weight: 700;
         cursor: pointer;
     }
 
